--- a/elderbb/elderbb-react-app/package.json
+++ b/elderbb/elderbb-react-app/package.json
@@ -10,7 +10,8 @@
     "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-scroll": "^1.7.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,5 +19,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:3060"
+  "proxy": "http://localhost:3060"
 }
